--- a/angSevenApp/src/app/app.component.html
+++ b/angSevenApp/src/app/app.component.html
@@ -1,3 +1,15 @@
-<h1>This is a test heading</h1>
-<h2>This is a smaller heading</h2>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>This is a test heading</h1>
+            <h2>This is a smaller heading</h2>
+            <hr>
+            <!-- component selector with element selector -->
+            <app-servers></app-servers>
+            <!-- checking component selector with attribute selector -->
+            <!-- <div app-servers></div> -->
+            <!-- checking component selector with css selector -->
+            <!-- <div class="app-servers"></div> -->
+        </div>
+    </div>
+</div>
