--- a/angSevenApp/src/app/servers/servers.component.html
+++ b/angSevenApp/src/app/servers/servers.component.html
@@ -1,3 +1,10 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
+<button class="btn btn-primary" [disabled]="!allowNewServer"
+(click)="onCreateServer()">Add Server</button>
+<div>
+	<p [innerText]="allowNewServer"></p>
+</div>
+<div>
+	<p>{{serverCreationStatus}}</p>
+</div>
 <app-server></app-server>
 <app-server></app-server>
