--- a/angSevenApp/src/app/servers/servers.component.html
+++ b/angSevenApp/src/app/servers/servers.component.html
@@ -1,14 +1,14 @@
 <label>Server Name</label>
-<input type="text" class="form-control" (input)="onUpdateServerName($event)"/>
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)"/> -->
 <input type="text" class="form-control" [(ngModel)]="serverName"/>
-<p [innerText]="serverName"></p>
+<!-- <p [innerText]="serverName"></p> -->
 <button class="btn btn-primary" [disabled]="!allowNewServer"
 (click)="onCreateServer()">Add Server</button>
 <div>
 	<p [innerText]="allowNewServer"></p>
 </div>
 <div>
-	<p>{{serverCreationStatus}}</p>
+	<p [innerText]="serverCreationStatus"></p>
 </div>
 <app-server></app-server>
 <app-server></app-server>
