--- a/angSevenApp/src/app/servers/servers.component.html
+++ b/angSevenApp/src/app/servers/servers.component.html
@@ -9,7 +9,11 @@
 </div>
 <div>
 	<!-- <p [innerText]="serverCreationStatus"></p> -->
-	<p *ngIf="serverCreated">A new server was created with name : {{ serverName }}</p>
+	<p *ngIf="serverCreated; else noServer">A new server was created with name : {{ serverName }}</p>
+
+	<ng-template #noServer>
+		<p>No Server created.</p>
+	</ng-template>
 </div>
 <app-server></app-server>
 <app-server></app-server>
