--- a/angSevenApp/src/app/server/server.component.html
+++ b/angSevenApp/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>The Server with ID: {{serverId}} is {{getServerStatus()}}</p>
+<p [ngStyle]="{'background-color': getColor()}">The {{'Server'}} with ID: {{serverId}} is {{getServerStatus()}}</p>
