--- a/angSevenApp/src/app/servers/servers.component.html
+++ b/angSevenApp/src/app/servers/servers.component.html
@@ -15,5 +15,4 @@
 		<p>No Server created.</p>
 	</ng-template>
 </div>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
