--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<input type="text" [(ngModel)]="name">
-<hr>
-<h3>{{name}}</h3>
-<hr>
-<hr>
-<app-server></app-server>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>This is the App Component</h3>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
