--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,6 @@
+<button [disabled]="!allowNewServer" class="btn btn-primary"> Add Server</button>
+<p [innerText]="allowNewServer"></p>
+<hr>
 <app-server></app-server>
 <hr>
 <app-success></app-success>
