--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,2 @@
-<p>The server {{ serverId }} is {{ getServerStatus() }}</p>
+<p [ngStyle]="{color: getColor()}"
+[ngClass]="getServerClass()">The server {{ serverId }} is {{ getServerStatus() }}</p>
