--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,20 @@
-<button [disabled]="!allowNewServer" class="btn btn-primary"> Add Server</button>
-<p [innerText]="allowNewServer"></p>
+<label>Server Name</label>
+
+<!--<input class="form-control" type="text" (input)="onUpdateServerName($event)">-->
+<input class="form-control" type="text" [(ngModel)]="serverName">
+
+<button [disabled]="!allowNewServer" class="btn btn-primary" (click)="onCreateServer()"> Add Server</button>
+<!--<p>{{ serverCreationStatus }}</p>-->
+<p *ngIf="serverCreationStatus; else noServer" >Server was created with name {{ serverName }}</p>
+<ng-template #noServer>
+    <p>
+        No server was created
+    </p>
+</ng-template>
 <hr>
+<app-server></app-server>
+<app-server></app-server>
+<app-server></app-server>
 <app-server></app-server>
 <hr>
 <app-success></app-success>
