--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<app-header></app-header>
+   <div class="container">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-md-12">
             <h3>This is the App Component</h3>
         </div>
     </div>
