--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
-    <div class="col-xs-10">
+    <div class="col-md-10">
         <app-shopping-edit></app-shopping-edit>
+        <hr>
+        <p>The Shopping List</p>
     </div>
-    <hr>
-    <p>The Shopping List</p>
 </div>
