passing data with event and property binding :building_construction:
structures the recipe, list, item and details components with data binding and event handling

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,6 +8,9 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor="let recipeElement of recipes" [recipeModel]="recipeElement"></app-recipe-item>
+        <app-recipe-item 
+        *ngFor="let recipeElement of recipes" 
+        [recipeModel]="recipeElement"
+        (selectRecipeEvent)="recipeSelectEmitReceive(recipeElement)"></app-recipe-item>
     </div>
 </div>
